--- a/src/components/navbar/links/links.module.css
+++ b/src/components/navbar/links/links.module.css
@@ -3,3 +3,41 @@
     align-items: center;
     gap: 10px;
 }
+
+.logoutBtn {
+    padding: 10px;
+    cursor: pointer;
+    font-weight: bold;
+}
+
+.mobileLinks,
+.menuBtn {
+    display: none;
+}
+
+@media (max-width: 768px) {
+    .links {
+        display: none;
+    }
+    .menuBtn {
+        display: block;
+        cursor: pointer;
+        font-size: 30px;
+        font-weight: bold;
+    }
+
+    .mobileLinks {
+        position: absolute;
+        top: 100px;
+        right: 0;
+        width: 25%;
+        height: calc(100vh - 100px);
+        background-color: var(--bg);
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        gap: 10px;
+        transition: height 0.5s ease-in-out;
+    }
+}
